# claude-kit

./: .defensive-patterns.example.json  .env.template  .gitignore  .gitleaks.toml  .prettierignore  .qualityrc.json  AGENTS.md  CHANGELOG.md  CLAUDE_CODE_OPTIMIZATION_GUIDE.md  EXTENSION-ARCHITECTURE.md  HOW_TO_USE_COMMANDS_EVERYWHERE.md  QUICK_START.md  README.md  SUBMODULE_SETUP.md  eslint.config.cjs  install.sh  knip.config.js  package.json  stryker.config.mjs  vitest.config.mjs
.husky/: pre-commit  pre-push
.semgrep/: defensive-patterns.yaml
agents/: accessibility-tester.md  architect-reviewer.md  code-reviewer.md  command-creator.md  competitive-analyst.md  critic.md  dev-guide-template.md  performance-engineer.md  postgres-pro.md  prompt-engineer.md  refactoring-specialist.md  security-auditor.md  seo-specialist.md
commands/: README.md  bs:scrub.md  debug.md  open-source-prep.md  refactor.md  update-claudemd.md
config/: CLAUDE.md  settings.json
eslint-plugin-defensive/: README.md  index.js  package.json
mcp-servers/linkedin-carousel-generator/: .env.template  IMPLEMENTATION_COMPLETE.md  README.md  SETUP.md  pyproject.toml  test-newsletter.md
mcp-servers/linkedin-carousel-generator/src/linkedin_carousel/: __init__.py  content_parser.py  generator.py  image_client.py  pdf_assembler.py  slide_designer.py
mcp-servers/linkedin-mcp-server/: .env.example  .env.template  pyproject.toml
mcp-servers/linkedin-mcp-server/scripts/: oauth-setup.py
mcp-servers/linkedin-mcp-server/src/linkedin_mcp_server/: server.py
mcp-servers/social-poster/: history.py  platforms.py  pyproject.toml  server.py  threads.py
mcp-servers/threads-mcp-server/: README.md  config.py  manager.py  pyproject.toml  server.py  threads_api.py
mcp-servers/twitter-mcp-server/: .env.example  .env.template  .gitignore  .twitter_schedule.json  com.brettstark.twitter-scheduler.plist  pyproject.toml
mcp-servers/twitter-mcp-server/src/twitter_mcp_server/: server.py
schemas/: defensive-patterns.schema.json
scripts/: README.md  agent-browser-bridge.js  agent-dashboard-server.js  agent-dashboard.html  ai-cli-cleanup.sh  auto-branch-on-main.sh  auto-init-check.sh  backlog-cleanup.js  backlog-post-merge.sh  backup-social-setup.sh  block-commit-main.sh  block-push-main.sh  bootstrap-ai-gates.sh  branch-drift-guard.sh  branch-protection-hook.sh  check-deprecated-apis.sh  check-mcp-health.sh  check-submodule-updates.sh  collab  detect-doc-changes.sh  generate-image.py  (+53 more)
(+117 files in other folders)
